// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render component 1`] = `
<div
  className="pagination-results"
>
  Showing 1 to 10 of 12 entries.
</div>
`;

exports[`Should render component to second page 1`] = `
<div
  className="pagination-results"
>
  Showing 11 to 12 of 12 entries.
</div>
`;
